@@ -1,3 +1,8 @@
+2017-10-01  Bastian Maerkisch  <bmaerkisch@web.de>
+
+	* src/win/wgraph.c:  Make sure that the bounding rectangle of emf data
+	starts at 0,0.  Bugfix.
+
 2017-09-29  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/axis.h src/axis.c (axis_set_scale_and_range):  Incorrect use
